--- a/ListNow/WebContent/files/index.css
+++ b/ListNow/WebContent/files/index.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("background.jpg");
+	background-image: url("img/background.jpg");
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
@@ -59,7 +59,7 @@ body {
 }
 
 .momo {
-	background-image: url("bg-banner.gif");
+	background-image: url("img/bg-banner.gif");
 	padding: 250px 0;
 }
 
