--- a/ListNow/WebContent/files/style.css
+++ b/ListNow/WebContent/files/style.css
@@ -1,6 +1,7 @@
 
 body {
-	background-color: gray;
+	background-color: #e1e1e1;
+	margin-bottom: 100px;
 }
 
 .container {
@@ -34,7 +35,7 @@ body {
 }
 
 #search-main {
-	width: 520px;
+	width: 400px;
 	margin-left: 20px;
 	margin-top: 7px;
 }
@@ -53,7 +54,7 @@ body {
 }
 
 .results {
-	margin: 40px 0px;
+	margin: 10px 0px;
 	text-align: left;
 }
 
@@ -102,7 +103,8 @@ body {
 	color: white;
 	padding: 20px;
 	bottom: 0px;
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	text-align: center;
+	opacity: .7;
 }
